# rulesgotest

./: BUILD.bazel  README.md  WORKSPACE  demo.c  go.mod
cgoexample/: BUILD.bazel  cgoexample.go
cgoexample_asm/: BUILD.bazel  asm_amd64.S  asm_arm64.S  asm_macros.h  cfunc.c  cfunc.h  cgoexample_asm.go
hello/: BUILD.bazel  hello.go
