load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cgoexample_asm_lib",
    srcs = [
        "asm_amd64.S",
        "asm_arm64.S",
        "asm_macros.h",
        "cfunc.c",
        "cfunc.h",
        "cgoexample_asm.go",
    ],
    cgo = True,
    importpath = "github.com/evanj/rulesgotest/cgoexample_asm",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cgoexample_asm",
    embed = [":cgoexample_asm_lib"],
    visibility = ["//visibility:public"],
)
