load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello_lib",
    srcs = ["hello.go"],
    importpath = "github.com/evanj/rulesgotest/hello",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "hello_pure",
    embed = [":hello_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
