load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello_lib",
    srcs = ["hello.go"],
    importpath = "github.com/evanj/rulesgotest/hello",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "hello_pure",
    embed = [":hello_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "hello_arm64",
    embed = [":hello_lib"],
    goarch = "arm64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "hello_ppc64",
    embed = [":hello_lib"],
    goarch = "ppc64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "hello_ppc64le",
    embed = [":hello_lib"],
    goarch = "ppc64le",
    goos = "linux",
    visibility = ["//visibility:public"],
)
